--- a/jem/Makefile
+++ b/jem/Makefile
@@ -1,2 +1,2 @@
 jem: jem.c
-		gcc -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include jem.c -o jem -lglib-2.0
+		gcc -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/openssl-1.1.1n/include/ jem.c -o jem -lglib-2.0 -lcrypto
