feat: example of serializing a data structure

--- a/jem/Makefile
+++ b/jem/Makefile
@@ -1,2 +1,6 @@
-jem: jem.c
-		gcc -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/openssl-1.1.1n/include/ jem.c -o jem -lglib-2.0 -lcrypto
+# glib: sudo apt-get install libglib2.0-dev
+# openssl: sudo apt install openssl libssl-dev
+sources = reference.c storage.c
+headers = reference.h structs.h storage.h
+jem:  $(sources) $(headers)
+	gcc `pkg-config --cflags glib-2.0` -Wall jem.c $(sources) -o jem `pkg-config --libs glib-2.0 openssl`
