Reorganize structs.h into multiple files

--- a/jem/Makefile
+++ b/jem/Makefile
@@ -1,6 +1,6 @@
 # glib: sudo apt-get install libglib2.0-dev
 # openssl: sudo apt install openssl libssl-dev
-sources = reference.c storage.c
-headers = reference.h structs.h storage.h
+sources = reference.c storage.c commit.c index.c snaptree.c
+headers = reference.h storage.h commit.h index.h snaptree.h
 jem:  $(sources) $(headers)
 	gcc `pkg-config --cflags glib-2.0` -Wall jem.c $(sources) -o jem `pkg-config --libs glib-2.0 openssl`
